--- a/templates/index.html
+++ b/templates/index.html
@@ -93,84 +93,22 @@
                 <div class="product_slider_items">
                     <div class="product_slider">
 
+                        {% for cate in category %}
                         <div class="sng_product_slide res_width_50">
                             <div class="sng_product_slide_cnt">
                                 <div class="product_slide_img">
-                                    <img src="products/p1.jpg" alt="Slide 1">
+                                    {% if cate.image %}
+                                    <img src="{{cate.image.url}}" alt="{{cate.image.url}}">
+                                    {% endif %}
                                 </div>
                                 <div class="product_slide_cnt">
                                     <div class="product_slide_title">
-                                        <h5>Editor's picks</h5>
+                                        <h5>{{cate.name}}</h5>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
-                        <div class="sng_product_slide res_width_50">
-                            <div class="sng_product_slide_cnt">
-                                <div class="product_slide_img">
-                                    <img src="products/p6.jpg" alt="Slide 1">
-                                </div>
-                                <div class="product_slide_cnt">
-                                    <div class="product_slide_title">
-                                        <h5>Editor's picks</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="sng_product_slide res_width_50">
-                            <div class="sng_product_slide_cnt">
-                                <div class="product_slide_img">
-                                    <img src="products/p5.jpg" alt="Slide 1">
-                                </div>
-                                <div class="product_slide_cnt">
-                                    <div class="product_slide_title">
-                                        <h5>Editor's picks</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="sng_product_slide res_width_50">
-                            <div class="sng_product_slide_cnt">
-                                <div class="product_slide_img">
-                                    <img src="products/p4.jpg" alt="Slide 1">
-                                </div>
-                                <div class="product_slide_cnt">
-                                    <div class="product_slide_title">
-                                        <h5>Editor's picks</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="sng_product_slide res_width_50">
-                            <div class="sng_product_slide_cnt">
-                                <div class="product_slide_img">
-                                    <img src="products/p3.jpg" alt="Slide 1">
-                                </div>
-                                <div class="product_slide_cnt">
-                                    <div class="product_slide_title">
-                                        <h5>Editor's picks</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="sng_product_slide res_width_50">
-                            <div class="sng_product_slide_cnt">
-                                <div class="product_slide_img">
-                                    <img src="products/p2.jpg" alt="Slide 1">
-                                </div>
-                                <div class="product_slide_cnt">
-                                    <div class="product_slide_title">
-                                        <h5>Editor's picks</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
+                        {% endfor %}
                     </div>
 
                     <div class="product_slider_controler">
@@ -185,7 +123,7 @@
     </div>
 
     <!-- End Product slider -->
-
+    
     <!-- product secction style 1 (Overview Nav) -->
     <div class="container_full" style="margin-top: 30px;">
         <div class="container">
@@ -220,43 +158,15 @@
 
                                     <div class="mugdhota_product">
 
+                                        {% for item in product_with_discount %}
                                         <div class="sng_mugdhota_product_item">
                                             <div class="sng_mugdhota_product">
                                                 <div class="sng_mugdhota_product_sec">
                                                     <div class="product_image">
                                                         <div class="product_img">
-                                                            <img src="simg/img5.avif" alt="">
-                                                        </div>
-                                                        <div class="add_wish">
-                                                            <div class="add_wish_text">
-                                                                <p>Add to Wishlist</p>
-                                                            </div>
-                                                            <div class="add_wish_icon">
-                                                                <i class="fa fa-heart-o"></i>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="product_info">
-                                                        <h2>The standard Lorem</h2>
-                                                        <div class="price_add_cart">
-                                                            <div class="product_price">
-                                                                <h1>850</h1>
-                                                            </div>
-                                                            <div class="add_cart_btn">
-                                                                <button><i class="fa fa-shopping-bag"></i> Add</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="sng_mugdhota_product_item">
-                                            <div class="sng_mugdhota_product">
-                                                <div class="sng_mugdhota_product_sec">
-                                                    <div class="product_image">
-                                                        <div class="product_img">
-                                                            <img src="simg/img4.jpeg" alt="">
+                                                            {% if item.product.image %}
+                                                            <img src="{{item.product.image.url}}" alt="">
+                                                            {% endif %}
                                                         </div>
                                                         <div class="add_wish">
                                                             <div class="add_wish_text">
@@ -267,15 +177,21 @@
                                                             </div>
                                                         </div>
                                                         <div class="discount_sec">
-                                                            <p>20% Off</p>
+                                                            {% if item.product.discount_price %}
+                                                            <p>{{item.product.discount_price}}% off</p>
+                                                            {% endif %}
                                                         </div>
                                                     </div>
                                                     <div class="product_info">
-                                                        <h2>The standard Lorem</h2>
+                                                        <h2>{{item.product.name}}</h2>
                                                         <div class="price_add_cart">
                                                             <div class="product_price">
-                                                                <h1>850</h1>
-                                                                <h3>1000</h3>
+                                                                {% if item.product.discount_price %}
+                                                                <h1>{{item.price_after_discount}} <i class="fa-solid fa-bangladeshi-taka-sign"></i></h1>
+                                                                <h3>{{item.product.price}} <i class="fa-solid fa-bangladeshi-taka-sign"></i></h3>
+                                                                {% else %}
+                                                                <h1>{{item.product.price}} <i class="fa-solid fa-bangladeshi-taka-sign"></i></h1>
+                                                                {% endif %}
                                                             </div>
                                                             <div class="add_cart_btn">
                                                                 <button><i class="fa fa-shopping-bag"></i> Add</button>
@@ -285,99 +201,7 @@
                                                 </div>
                                             </div>
                                         </div>
-
-                                        <div class="sng_mugdhota_product_item">
-                                            <div class="sng_mugdhota_product">
-                                                <div class="sng_mugdhota_product_sec">
-                                                    <div class="product_image">
-                                                        <div class="product_img">
-                                                            <img src="simg/img3.jpeg" alt="">
-                                                        </div>
-                                                        <div class="add_wish">
-                                                            <div class="add_wish_text">
-                                                                <p>Add to Wishlist</p>
-                                                            </div>
-                                                            <div class="add_wish_icon">
-                                                                <i class="fa fa-heart-o"></i>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="product_info">
-                                                        <h2>The standard Lorem</h2>
-                                                        <div class="price_add_cart">
-                                                            <div class="product_price">
-                                                                <h1>850</h1>
-                                                            </div>
-                                                            <div class="add_cart_btn">
-                                                                <button><i class="fa fa-shopping-bag"></i> Add</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="sng_mugdhota_product_item">
-                                            <div class="sng_mugdhota_product">
-                                                <div class="sng_mugdhota_product_sec">
-                                                    <div class="product_image">
-                                                        <div class="product_img">
-                                                            <img src="simg/img1.jpeg" alt="">
-                                                        </div>
-                                                        <div class="add_wish">
-                                                            <div class="add_wish_text">
-                                                                <p>Add to Wishlist</p>
-                                                            </div>
-                                                            <div class="add_wish_icon">
-                                                                <i class="fa fa-heart-o"></i>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="product_info">
-                                                        <h2>The standard Lorem</h2>
-                                                        <div class="price_add_cart">
-                                                            <div class="product_price">
-                                                                <h1>850</h1>
-                                                            </div>
-                                                            <div class="add_cart_btn">
-                                                                <button><i class="fa fa-shopping-bag"></i> Add</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="sng_mugdhota_product_item">
-                                            <div class="sng_mugdhota_product">
-                                                <div class="sng_mugdhota_product_sec">
-                                                    <div class="product_image">
-                                                        <div class="product_img">
-                                                            <img src="simg/img2.jpg" alt="">
-                                                        </div>
-                                                        <div class="add_wish">
-                                                            <div class="add_wish_text">
-                                                                <p>Add to Wishlist</p>
-                                                            </div>
-                                                            <div class="add_wish_icon">
-                                                                <i class="fa fa-heart-o"></i>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="product_info">
-                                                        <h2>The standard Lorem</h2>
-                                                        <div class="price_add_cart">
-                                                            <div class="product_price">
-                                                                <h1>850</h1>
-                                                            </div>
-                                                            <div class="add_cart_btn">
-                                                                <button><i class="fa fa-shopping-bag"></i> Add</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        {% endfor %}
 
                                     </div>
 
